# 50-Days-of-Verilog

Day-10(demux)/demux/: demux.v  demux1_4.vcd  design  tb_demux1x2.v  tb_demux1x4.v  tb_demux1x8.v
Day-11(encoder)/encoder/: design  dump_day10.vcd  encoder.v
Day-12_decoder/: decoder.v  design  dump_day11.vcd  tb_decoder.v
Day-13_Priority_Encoder/: Priority_Encoder.v  design  dump_simple.vcd
Day-14(ALU)/: Alu.v.txt
Day-14(parity)/: design  parity.v  parity.vcd  tb_parity.v
Day-2(half_adder)/: dump_day2.vcd  halfadder
Day-4(half_sub)/: dump_tb_half_sub.vcd  half_sub.v  tb_half_sub.v
Day-5(full_sub)/: dump_full_sub.vcd  full_sub.v  tb_full_sub.v
Day-6(full_adder using half_adder)/: dump_full_adder.vcd  full_adder.v  fullader  half_adder.v  tb_full_adder.v
Day-7(4Bit_full_adder)/: ffav.v  full_adder  full_adder.v  tb_ffav.v
Day-9(mux)/: mux.v  tb_mux.v
Day_3(full_adder)/: full_adder.v  tb_full_adder.v  tb_full_adder.vcd
Day_3(full_adder)/pic/: full_adder
Day_8(1-bit Comparator)/: comp_1bit.v  tb_comp_1bit.v
half_adder/: half_adder.v  tb_half_adder.v
translate/: build.gradle.kts  local.properties  settings.gradle.kts
translate/app/: build.gradle.kts
translate/app/src/main/: AndroidManifest.xml
translate/app/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp
translate/app/src/main/res/layout/: activity_main.xml
translate/gradle/: libs.versions.toml
translate/gradle/wrapper/: gradle-wrapper.properties
verilog/Day-1(logic_gate)/: logic_gates.v  logiv_gates_wave.vcd  my_design.unknown  tb_logic_gates.v
(+2 files in other folders)
